--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar-page{
+  background-image: url('../src/components/images/background.png');;
+}
+
+.container1{
+  background-image: url('../src/components/images/Login.png');
+  width: 100%;
+  height: 700px;
+  font-family: "Monospace";
+  margin: 2px;
+  padding: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+ background-size:cover;
+  
+}
+
+.container{
+  background-image: url('../src/components/images/Register.png');
+  width: 100%;
+  height: 700px;
+  font-family: "Monospace";
+  margin: 2px;
+  padding: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+ background-size:cover;
+  
+}
